changes to active_learning.py

--- a/active_learning.ipynb
+++ b/active_learning.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -37,14 +37,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_train: (23819, 38), y_train: (23819,)\n",
+      "X_train: (10000, 38), y_train: (10000,)\n",
       "X_val: (5955, 38), y_val: (5955,)\n",
       "X_test: (500, 38), y_test: (500,)\n"
      ]
@@ -56,7 +56,7 @@
     "\n",
     "# Temporarily use subset of data to debug faster\n",
     "# TODO: Remove\n",
-    "# X_train, y_train = X_train[:2000,:], y_train[:2000]\n",
+    "X_train, y_train = X_train[:10000,:], y_train[:10000]\n",
     "# X_val, y_val     = X_val[:500,:], y_val[:500]\n",
     "X_test, y_test   = X_test[:500,:], y_test[:500]\n",
     "\n",
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -89,10 +89,10 @@
     {
      "data": {
       "text/plain": [
-       "<paramz.optimization.optimization.opt_lbfgsb at 0x7fd1462b5f60>"
+       "<paramz.optimization.optimization.opt_lbfgsb at 0x7f26d4e2d9b0>"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,15 +110,17 @@
     "y_train_scaled = y_scaler.transform(y_train.reshape(-1,1))\n",
     "\n",
     "kernel = GPy.kern.RBF(input_dim=X_train.shape[1], variance=1., lengthscale=1.)\n",
+    "import time\n",
+    "np.random.seed(int(time.time()))\n",
     "\n",
     "# normal GP\n",
     "# gp_model = GPy.models.SparseGPRegression(X_train_scaled, y_train_scaled, kernel)\n",
     "# gp_model.optimize()\n",
     "\n",
     "# maximum entropy sampling\n",
-    "X_sampled, y_sampled = maximum_entropy_sampling(X_train_scaled, y_train_scaled, 100)\n",
-    "gp_model = GPy.models.GPRegression(X_sampled, y_sampled, kernel)\n",
-    "gp_model.optimize()\n",
+    "# X_sampled, y_sampled = maximum_entropy_sampling(X_train_scaled, y_train_scaled, 100)\n",
+    "# gp_model = GPy.models.GPRegression(X_sampled, y_sampled, kernel)\n",
+    "# gp_model.optimize()\n",
     "\n",
     "# DARE sampling\n",
     "# X_sampled, y_sampled = DARE_sampling(X_train_scaled, y_train_scaled, 100, X_scaler) \n",
@@ -131,14 +133,16 @@
     "# gp_model.optimize()\n",
     "\n",
     "# random sampling\n",
-    "# X_sampled, y_sampled = random_sampling(X_train_scaled, y_train_scaled, 100)\n",
-    "# gp_model = GPy.models.GPRegression(X_sampled, y_sampled, kernel)\n",
-    "# gp_model.optimize()"
+    "# import time\n",
+    "# np.random.seed(int(time.time()))\n",
+    "X_sampled, y_sampled = random_sampling(X_train_scaled, y_train_scaled, 100)\n",
+    "gp_model = GPy.models.GPRegression(X_sampled, y_sampled, kernel)\n",
+    "gp_model.optimize()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +154,7 @@
       "Simulating period 0...\n",
       "Simulating period 10...\n",
       "Mean Total Profits:\n",
-      "426220.51335\n"
+      "361271.152059\n"
      ]
     }
    ],
@@ -161,7 +165,7 @@
     "%autoreload 2\n",
     "%reload_ext autoreload\n",
     "\n",
-    "SEED            = 1\n",
+    "SEED            = int(time.time())\n",
     "THRESHOLD       = 1.1\n",
     "NUM_PERIODS     = 20\n",
     "NUM_MONTHS      = 60\n",
@@ -177,7 +181,13 @@
     "                                  version=\"loan_amount_and_variance\", model_type=\"gp\", seed=SEED)\n",
     "\n",
     "print(\"Mean Total Profits:\")\n",
-    "print(np.mean(np.sum(perf_gp[:,:,0], axis=1)))\n"
+    "print(np.mean(np.sum(perf_gp[:,:,0], axis=1)))\n",
+    "\n",
+    "# Saving performances to pickle file and Loading performances from it\n",
+    "filename = os.path.join(\"results\", \"perf_gp_MSE\")\n",
+    "meta_info = [\"GP_MSE\"]\n",
+    "performances = [perf_gp]\n",
+    "store_performance_results(performances, meta_info, filename)\n"
    ]
   },
   {
