--- a/train2.ipynb
+++ b/train2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,9 +17,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Preprocessing...\n",
+      "Feature Engineering...\n",
+      "Data shape: (42535, 40)\n"
+     ]
+    }
+   ],
    "source": [
     "filename = \"dataset/LoanStats3a.csv\"\n",
     "features, data = load_dataset(filename)\n",
@@ -28,9 +38,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "X_train: (1000, 38), y_train: (1000,)\n",
+      "X_val: (5955, 38), y_val: (5955,)\n",
+      "X_test: (12761, 38), y_test: (12761,)\n"
+     ]
+    }
+   ],
    "source": [
     "X_train, X_test, y_train, y_test = get_train_test_split(features, test_size=0.3, random_state=0)\n",
     "X_train, X_val, y_train, y_val = train_test_split(X_train, y_train, test_size=0.2, random_state=0)\n",
@@ -38,8 +58,8 @@
     "# Temporarily use subset of data to debug faster\n",
     "# TODO: Remove\n",
     "X_train, y_train = X_train[:1000,:], y_train[:1000]\n",
-    "X_val, y_val     = X_val[:500,:], y_val[:500]\n",
-    "X_test, y_test   = X_test[:500,:], y_test[:500]\n",
+    "# X_val, y_val     = X_val[:500,:], y_val[:500]\n",
+    "# X_test, y_test   = X_test[:500,:], y_test[:500]\n",
     "\n",
     "# Normalize\n",
     "X_scaler = MinMaxScaler()\n",
@@ -61,9 +81,44 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<paramz.optimization.optimization.opt_lbfgsb at 0x7f1f2d695f98>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import GPy\n",
+    "# Initialize GP Model\n",
+    "kernel = GPy.kern.RBF(input_dim=X_train.shape[1], variance=1., lengthscale=1.)\n",
+    "gp_model = GPy.models.GPRegression(X_train, y_train_scaled, kernel)\n",
+    "gp_model.optimize()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "Simulating period 0...\n",
+      "Simulating period 10...\n"
+     ]
+    }
+   ],
    "source": [
     "from simulation import *\n",
     "\n",
@@ -75,16 +130,26 @@
     "THRESHOLD       = 1.1\n",
     "NUM_PERIODS     = 20\n",
     "NUM_MONTHS      = 60\n",
-    "FUND_GIVEN      = 1e6\n",
+    "FUND_FLOW      = 1e4\n",
     "LOANS_PER_MONTH = 100\n",
-    "CONF_QUANTILE   = (80,100)\n",
+    "CONF_QUANTILE   = (40,100)\n",
     "\n",
     "perf_gp = simulate_N_time_periods(gp_model, X_val, y_val, X_scaler, y_scaler, \n",
-    "                                  threshold=THRESHOLD, num_periods=NUM_PERIODS, fund_given=FUND_GIVEN, \n",
+    "                                  threshold=THRESHOLD, num_periods=NUM_PERIODS, flow=FUND_FLOW, \n",
     "                                  num_months=NUM_MONTHS,incoming_loans_per_time_period=LOANS_PER_MONTH,\n",
     "                                  conf_quantile=CONF_QUANTILE, optimize_for=\"TODO\", \n",
-    "                                  version=\"expected_total_payment_and_variance\", model_type=\"gp\", seed=SEED)"
+    "                                  version=\"expected_total_payment_and_variance\", model_type=\"gp\", seed=SEED)\n",
+    "\n",
+    "print(\"Mean Total Profits:\")\n",
+    "print(np.mean(np.sum(perf_gp[:,:,0], axis=1)))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
