Ignored simulation.py

--- a/gp_vs_bayes_opt_1.ipynb
+++ b/gp_vs_bayes_opt_1.ipynb
@@ -204,7 +204,7 @@
     "\n",
     "# Saving performances to pickle file and Loading performances from it\n",
     "filename = os.path.join(\"results\", \"perf_bayeopt_vs_gp_1\")\n",
-    "meta_info = [\"Normal GP\", \"BayOpt GP\"]\n",
+    "meta_info = [\"SelfUpd GP\", \"BayOpt GP\"]\n",
     "performances = [perf_gp, perf_bayes_opt]\n",
     "store_performance_results(performances, meta_info, filename)\n",
     "\n",
